feat(ai): fonctional rag
